manifest.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: evite-mono
  labels:
    name: evite-mono
    istio-injection: enabled
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: evite-mono-gateway
  namespace: evite-mono
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "evite-mono.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: evite-mono
  namespace: evite-mono
spec:
  hosts:
    - "evite-mono.com"
  gateways:
    - evite-mono-gateway
  http:
    - route:
        - destination:
            host: evite-mono
            port:
              number: 4020
---
apiVersion: v1
kind: Service
metadata:
  name: evite-mono
  namespace: evite-mono
  labels:
    app: evite-mono
    service: evite-mono
spec:
  ports:
    - port: 4020
      name: http
  selector:
    app: evite-mono
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evite-mono
  namespace: evite-mono
  labels:
    app: evite-mono
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: evite-mono
      version: v1
  template:
    metadata:
      labels:
        app: evite-mono
        version: v1
    spec:
      containers:
        - name: evite-mono
          image: registry.gitlab.com/mernxl-evite/evite-mono:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4020
---
